[package]
name = "yet-another-imgs2pdf"
version = "0.2.0"
edition = "2021"


[dependencies]
printpdf = { version = "0.5", features = ["embedded_images"], default-features = false }
clap = { version = "3", features = ["std"], default-features = false }


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = false
